--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Christopher Jeffrey <chjjeffrey@gmail.com>",
   "main": "./lib/golomb.js",
   "scripts": {
+    "install": "node-gyp rebuild || echo 'Build failed.'",
     "browserify": "browserify -s golomb lib/golomb.js | uglifyjs -c > golomb.js",
     "clean": "rm -f golomb.js",
     "lint": "eslint lib/ test/ || exit 0",
@@ -26,7 +27,9 @@
   },
   "dependencies": {
     "bcrypto": "^0.0.1",
-    "n64": "^0.0.18"
+    "bindings": "^1.3.0",
+    "n64": "^0.0.18",
+    "nan": "^2.7.0"
   },
   "devDependencies": {
     "babelify": "^7.3.0",
@@ -47,5 +50,6 @@
     "transform": [
       "babelify"
     ]
-  }
+  },
+  "gypfile": true
 }
