--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "main": "./lib/golomb.js",
   "scripts": {
     "lint": "eslint lib/ test/ || exit 0",
-    "test": "mocha --reporter spec test/*-test.js"
+    "test": "bmocha --reporter spec test/*-test.js"
   },
   "dependencies": {
     "bcrypto": "~3.0.0",
@@ -28,7 +28,7 @@
     "n64": "~0.2.3"
   },
   "devDependencies": {
-    "mocha": "^5.2.0"
+    "bmocha": "^0.1.0"
   },
   "engines": {
     "node": ">=8.0.0"
